force-app/main/default/objects/ForecastOutput52Week__c/fields/opportunityForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>opportunityForecastCategory__c</fullName>
    <label>Opportunity Forecast Category</label>
    <length>120</length>
    <type>Text</type>
</CustomField>