force-app/main/default/objects/ForecastOutput52Week__c/fields/opportunityLineItemID__c.field-meta.xml
<CustomField>
    <fullName>opportunityLineItemID__c</fullName>
    <label>Opportunity Line Item ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>