force-app/main/default/objects/ForecastOutput52Week__c/fields/opportunityName__c.field-meta.xml
<CustomField>
    <fullName>opportunityName__c</fullName>
    <label>Opportunity Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>