force-app/main/default/objects/ForecastOutput52Week__c/fields/opportunityStage__c.field-meta.xml
<CustomField>
    <fullName>opportunityStage__c</fullName>
    <label>Opportunity Stage</label>
    <length>120</length>
    <type>Text</type>
</CustomField>