force-app/main/default/objects/ForecastOutput52Week__c/fields/plm__c.field-meta.xml
<CustomField>
    <fullName>plm__c</fullName>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLM</label>
    <type>Checkbox</type>
</CustomField>