force-app/main/default/objects/ForecastOutput52Week__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Forecast_Output_52_Weeks</relationshipName>
    <type>Lookup</type>
</CustomField>