force-app/main/default/objects/ForecastOutput52Week__c/fields/productCode__c.field-meta.xml
<CustomField>
    <fullName>productCode__c</fullName>
    <label>Product Code</label>
    <length>120</length>
    <type>Text</type>
</CustomField>