force-app/main/default/objects/ForecastOutput52Week__c/fields/productionVolume__c.field-meta.xml
<CustomField>
    <fullName>productionVolume__c</fullName>
    <label>Production Volume (Parts/Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>