force-app/main/default/objects/ForecastOutput52Week__c/fields/productLine__c.field-meta.xml
<CustomField>
    <fullName>productLine__c</fullName>
    <formula>text(Product__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>