force-app/main/default/objects/ForecastOutput52Week__c/fields/productName__c.field-meta.xml
<CustomField>
    <fullName>productName__c</fullName>
    <label>Product Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>