force-app/main/default/objects/ForecastOutput52Week__c/fields/productSegmentation__c.field-meta.xml
<CustomField>
    <fullName>productSegmentation__c</fullName>
    <label>Product Segmentation</label>
    <length>120</length>
    <type>Text</type>
</CustomField>