force-app/main/default/objects/ForecastOutput52Week__c/fields/programCompleted__c.field-meta.xml
<CustomField>
    <fullName>programCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Completed?</label>
    <type>Checkbox</type>
</CustomField>