force-app/main/default/objects/ForecastOutput52Week__c/fields/programName__c.field-meta.xml
<CustomField>
    <fullName>programName__c</fullName>
    <label>Program Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>