force-app/main/default/objects/ForecastOutput52Week__c/fields/region__c.field-meta.xml
<CustomField>
    <fullName>region__c</fullName>
    <label>Region</label>
    <length>120</length>
    <type>Text</type>
</CustomField>