force-app/main/default/objects/ForecastOutput52Week__c/fields/Screen_Size_ft2__c.field-meta.xml
<CustomField>
    <fullName>Screen_Size_ft2__c</fullName>
    <formula>opportunity__r.Screen_Size_ft2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Screen Size (ft2)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>