force-app/main/default/objects/ForecastOutput52Week__c/fields/shipToCustomer__c.field-meta.xml
<CustomField>
    <fullName>shipToCustomer__c</fullName>
    <label>TPM / Ship to Customer</label>
    <length>120</length>
    <type>Text</type>
</CustomField>