force-app/main/default/objects/ForecastOutput52Week__c/fields/specification__c.field-meta.xml
<CustomField>
    <fullName>specification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specification</label>
    <referenceTo>Specification__c</referenceTo>
    <relationshipName>Forecast_Output_52_Weeks</relationshipName>
    <type>Lookup</type>
</CustomField>