force-app/main/default/objects/ForecastOutput52Week__c/fields/specificationNumber__c.field-meta.xml
<CustomField>
    <fullName>specificationNumber__c</fullName>
    <label>Specification Number</label>
    <length>120</length>
    <type>Text</type>
</CustomField>