force-app/main/default/objects/ForecastOutput52Week__c/fields/specificationSpecialRequirements__c.field-meta.xml
<CustomField>
    <fullName>specificationSpecialRequirements__c</fullName>
    <formula>specification__r.specialRequirements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specification Special Requirements</label>
    <type>Text</type>
</CustomField>