force-app/main/default/objects/ForecastOutput52Week__c/fields/squareFeet__c.field-meta.xml
<CustomField>
    <fullName>squareFeet__c</fullName>
    <label>Square Feet</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>