force-app/main/default/objects/ForecastOutput52Week__c/fields/thickness__c.field-meta.xml
<CustomField>
    <fullName>thickness__c</fullName>
    <label>Thickness</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>