force-app/main/default/objects/ForecastOutput52Week__c/fields/Total_M10_Glass_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Total_M10_Glass_SqFt__c</fullName>
    <formula>m10GlassSqFt__c  /  currentMixGorillaGlass__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total M10 Glass SqFt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>