force-app/main/default/objects/ForecastOutput52Week__c/fields/Total_M10_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_M10_Qty__c</fullName>
    <formula>m10Qty__c  /  currentMixGorillaGlass__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total M10 Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>