force-app/main/default/objects/ForecastOutput52Week__c/fields/totalGlassSqFt__c.field-meta.xml
<CustomField>
    <fullName>totalGlassSqFt__c</fullName>
    <label>M1 - M18 Glass SqFt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>