force-app/main/default/objects/ForecastOutput52Week__c/fields/totalPrice__c.field-meta.xml
<CustomField>
    <fullName>totalPrice__c</fullName>
    <label>M1 - M18 Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>