force-app/main/default/objects/ForecastOutput52Week__c/fields/totalQuantity__c.field-meta.xml
<CustomField>
    <fullName>totalQuantity__c</fullName>
    <label>M1 - M18 Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>