force-app/main/default/objects/ForecastOutput52Week__c/fields/tpmAccount__c.field-meta.xml
<CustomField>
    <fullName>tpmAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TPM / Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecast Output (TPM Account)</relationshipLabel>
    <relationshipName>Forecast_Output_52_Weeks1</relationshipName>
    <type>Lookup</type>
</CustomField>