force-app/main/default/objects/ForecastOutput52Week__c/fields/tpmOwner__c.field-meta.xml
<CustomField>
    <fullName>tpmOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TPM / Ship To Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Forecast_Output_52_Weeks2</relationshipName>
    <type>Lookup</type>
</CustomField>