force-app/main/default/objects/ForecastOutput52Week__c/fields/treatment__c.field-meta.xml
<CustomField>
    <fullName>treatment__c</fullName>
    <label>Treatment</label>
    <length>120</length>
    <type>Text</type>
</CustomField>