force-app/main/default/objects/ForecastOutput52Week__c/fields/width__c.field-meta.xml
<CustomField>
    <fullName>width__c</fullName>
    <label>Width</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>