force-app/main/default/objects/ForecastOutput52Week__c/listViews/Active_Needs_Archived.listView-meta.xml
<ListView>
    <fullName>Active_Needs_Archived</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>status__c</columns>
    <columns>opportunity__c</columns>
    <columns>productName__c</columns>
    <columns>shipToCustomer__c</columns>
    <columns>tpmOwner__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Active - Needs Archived</label>
    <language>en_US</language>
</ListView>