force-app/main/default/objects/ForecastOutput52Week__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>status__c</columns>
    <columns>opportunity__c</columns>
    <columns>productName__c</columns>
    <columns>shipToCustomer__c</columns>
    <columns>tpmOwner__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>