force-app/main/default/objects/ForecastOutput52Week__c/listViews/All_NOT_PLM.listView-meta.xml
<ListView>
    <fullName>All_NOT_PLM</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>status__c</columns>
    <columns>opportunity__c</columns>
    <columns>productName__c</columns>
    <columns>shipToCustomer__c</columns>
    <columns>tpmOwner__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>status__c</field>
        <operation>notEqual</operation>
        <value>Locked</value>
    </filters>
    <label>All - NOT PLM</label>
    <language>en_US</language>
</ListView>