force-app/main/default/objects/ForecastOutput52Week__c/listViews/Archived.listView-meta.xml
<ListView>
    <fullName>Archived</fullName>
    <booleanFilter>(1 OR 3) AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>status__c</columns>
    <columns>opportunity__c</columns>
    <columns>productName__c</columns>
    <columns>shipToCustomer__c</columns>
    <columns>tpmOwner__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
        <value>Active,Archived</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>notEqual</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
    </filters>
    <label>Archived</label>
    <language>en_US</language>
</ListView>