force-app/main/default/objects/ForecastOutput52Week__c/listViews/Locked_All.listView-meta.xml
<ListView>
    <fullName>Locked_All</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>status__c</columns>
    <columns>opportunity__c</columns>
    <columns>productName__c</columns>
    <columns>shipToCustomer__c</columns>
    <columns>tpmOwner__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
        <value>Locked</value>
    </filters>
    <label>Locked - All</label>
    <language>en_US</language>
</ListView>