force-app/main/default/objects/ForecastOutput52Week__c/listViews/Locked_Glass.listView-meta.xml
<ListView>
    <fullName>Locked_Glass</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>productLine__c</columns>
    <columns>status__c</columns>
    <columns>opportunity__c</columns>
    <columns>productName__c</columns>
    <columns>shipToCustomer__c</columns>
    <columns>tpmOwner__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
        <value>Locked</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>productLine__c</field>
        <operation>notEqual</operation>
        <value>Parts</value>
    </filters>
    <label>Locked - Glass</label>
    <language>en_US</language>
</ListView>